--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -1,10 +1,19 @@
 @import "utils";
 @import "fonts";
 @import "typography";
+@import "variables";
 @import "reset";
+@import "content";
+@import "event";
+@import "footer";
 @import "header";
-@import "container";
-@import "current-events";
+@import "info";
+@import "logo";
+@import "nav-top";
+@import "nav";
+@import "promo";
+@import "slider-btn";
+@import "square";
 
 body {
   background-color: #fff;
