--- a/src/styles/content.scss
+++ b/src/styles/content.scss
@@ -157,9 +157,15 @@
     border: none;
     height: 50px;
     width: 233px;
-
-    font-family: inherit;
+    font-family: Montserrat, sans-serif;
+    font-size: 16px;
+    line-height: 100%;
     padding-left: 31px;
+
+    &::placeholder {
+      font-size: 16px;
+      line-height: 100%;
+    }
 
   }
 
