--- a/src/styles/header.scss
+++ b/src/styles/header.scss
@@ -10,7 +10,8 @@
     z-index: 3;
     display: none;
     padding: 0 $mediumGap;
-    background-color: $greenColor;
+    background-color: #fff;
+    border-bottom: 1px solid #f2f2f2;
   }
 
   &__hidden-menu {
@@ -84,13 +85,13 @@
     }
   }
 
-  @media (min-width: 1680px) {
-    &__search {
-      right: $largeGap;
-    }
+  // @media (min-width: 1680px) {
+  //   &__search {
+  //     right: $largeGap;
+  //   }
 
-    &__search-input {
-      right: 200px;
-    }
-  }
+  //   &__search-input {
+  //     right: 200px;
+  //   }
+  // }
 }
