--- a/src/styles/logo.scss
+++ b/src/styles/logo.scss
@@ -3,7 +3,7 @@
   height: $logoHeight;
   margin-top: 9px;
   z-index: 3;
-  background: url("../images/logo.png") center no-repeat;
+  background: url("../images/logo.svg") center no-repeat;
   background-size: contain;
   transition: transform 0.5s;
 
