--- a/src/styles/nav-top.scss
+++ b/src/styles/nav-top.scss
@@ -33,13 +33,14 @@
 
     &__link {
       height: 72px;
+      font-weight: bold;
       font-size: 1rem;
       transition: 0.5s;
 
       &:link,
       &:visited,
       &:active {
-        color: #fff;
+        color: $greenColor;
       }
 
       &:hover {
@@ -50,7 +51,7 @@
           bottom: 10px;
           width: 100%;
           height: 2px;
-          background-color: #fff;
+          background-color: $greenColor;
           border-radius: 2px / 2;
           content: "";
           animation: linksUnderline 0.5s;
