Added actual exhibitions block

--- a/src/styles/_global.scss
+++ b/src/styles/_global.scss
@@ -12,6 +12,7 @@ html {
 
 body {
   overflow-x: hidden;
+  background-color: $brightColor;
 }
 
 .container {
@@ -31,5 +32,13 @@ body {
 
   &__header {
     padding-top: 20px;
+  }
+
+  &__actual {
+    padding-top: 160px;
+
+    @media (max-width: $iPadScreenWidth) {
+      padding-top: 60px;
+    }
   }
 }
