--- a/src/styles/blocks/hidden-nav.scss
+++ b/src/styles/blocks/hidden-nav.scss
@@ -90,7 +90,7 @@ $imgHeight: 801px;
       margin-right: 0;
       margin-left: 14px;
       background-color: transparent;
-      border: 1px solid $brightColor;
+      outline: 1px solid $brightColor;
 
       @media (max-width: $iPadScreenWidth) {
         margin-top: 20px;
@@ -110,7 +110,7 @@ $imgHeight: 801px;
     right: $translateWide;
     transition: ease 2s;
 
-    @media (max-width: $noteScreenWidth) {
+    @media (max-width: $tabletScreenWidth) {
       display: none;
     }
   }
