--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -7,3 +7,6 @@
 @import "blocks/burger-menu";
 @import "blocks/hidden-nav";
 @import "blocks/nav";
+@import "blocks/actual";
+@import "blocks/exhibition";
+@import "blocks/card";
