--- a/src/styles/blocks/promo.scss
+++ b/src/styles/blocks/promo.scss
@@ -1,7 +1,3 @@
-$translateWide: calc(#{$wideScreenPadding} - 100px);
-$translateTablet: calc(#{$noteScreenPadding} - 50px);
-$translateMobile: calc(#{$iPadScreenPadding} - 110px);
-
 $promoTextTranslate: 100px;
 
 $imgWidth: 673px;
@@ -93,7 +89,7 @@ $imgHeight: 753px;
     align-items: center;
     opacity: 0.7;
     line-height: 100%;
-    animation: promo-translate-right 1s;
+    @include translateFromRight(1s);
 
     @media (max-width: $iPadScreenWidth) {
       display: none;
@@ -123,7 +119,7 @@ $imgHeight: 753px;
     }
 
     @media (max-width: $iPadScreenWidth) {
-      right: $translateMobile;
+      right: $translateiPad;
     }
 
     &:hover {
@@ -159,7 +155,7 @@ $imgHeight: 753px;
   }
 }
 
-@keyframes promo-translate {
+@keyframes promo-translate-left {
   from {
     transform: translateX(-100%);
   }
