--- a/src/styles/utils/_mixins.scss
+++ b/src/styles/utils/_mixins.scss
@@ -6,7 +6,19 @@
 }
 
 @mixin translateFromLeft($duration) {
-  animation-name: promo-translate;
+  animation-name: promo-translate-left;
   animation-duration: $duration;
   animation-timing-function: ease;
+}
+
+@mixin translateFromRight($duration) {
+  animation-name: promo-translate-right;
+  animation-duration: $duration;
+  animation-timing-function: ease;
+}
+
+@mixin playfairSizeHeight($size, $height) {
+  font-family: "Playfair display", serif;
+  font-size: $size;
+  line-height: $height;
 }
