--- a/src/styles/utils/_vars.scss
+++ b/src/styles/utils/_vars.scss
@@ -3,7 +3,7 @@ $brightColor: #f1f5f4;
 $accentColor: #cd4d31;
 $darkColor: #1c1b29;
 
-$wideScreenPadding: calc(50% - 550px);
+$wideScreenPadding: calc(50% - 605px);
 $noteScreenPadding: 6%;
 $tabletScreenPadding: 15%;
 $iPadScreenPadding: 20px;
@@ -12,3 +12,7 @@ $noteScreenWidth: 1279px;
 $tabletScreenWidth: 1023px;
 $iPadScreenWidth: 767px;
 $mobileScreenWidth: 479px;
+
+$translateWide: calc(#{$wideScreenPadding} - 60px);
+$translateTablet: calc(#{$tabletScreenPadding} - 50px);
+$translateiPad: calc(#{$iPadScreenPadding} - 110px);
