--- a/src/styles/media.scss
+++ b/src/styles/media.scss
@@ -1,4 +1,4 @@
-@media (max-width: 1280px) {
+@media (max-width: 1400px) {
   .header__photo {
     display: none;
   }
@@ -8,7 +8,15 @@
   }
 
   .header__main {
-    width: 59.32%;
+    width: 56.64%;
+  }
+
+  .section__small {
+    padding: 0 55px;
+  }
+  
+  .footer {
+    padding: 0 55px;
   }
 }
 
