--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -1,7 +1,23 @@
 @import "utils";
 @import "fonts";
 @import "typography";
+@import "header";
+@import "container";
+@import "menu";
+@import "navigation";
+@import "selection";
+@import "title";
+@import "button";
+
+* {
+  box-sizing: border-box;
+}
+
+html {
+  scroll-behavior: smooth;
+}
 
 body {
-  background: $c-gray;
+  background: $colorBody;
+  font-family: "Raleway", sans-serif;
 }
