--- a/src/styles/utils/_extends.scss
+++ b/src/styles/utils/_extends.scss
@@ -2,3 +2,31 @@
   font-family: "Roboto", sans-serif;
   font-weight: 400;
 }
+
+%p {
+  font-size: 16px;
+  line-height: 150%;
+}
+
+%red-button {
+  color: $colorLight;
+  background-color: $colorComplementary;
+  border: none;
+
+  @include hover(background-color, hsl(11, 71%, 45%));
+}
+
+%green-button {
+  color: $colorLight;
+  background-color: $colorMain;
+  border: 1px solid $colorLight;
+
+  @include hover(background-color, hsl(180, 13%, 26%));
+}
+
+%burger-button {
+  top: $containerTopIndent + 10px;
+  right: $containerSideIndentDesk + 91px;
+  width: $burgerMenuWidth;
+  height: $burgerNenuHeight;
+}
