--- a/src/styles/utils/_mixins.scss
+++ b/src/styles/utils/_mixins.scss
@@ -4,3 +4,17 @@
     #{$_property}: $_toValue;
   }
 }
+
+@mixin transform($_property, $_toValue) {
+  transition: #{$_property} 0.3s;
+  .menu__checkbox:checked ~ & {
+    #{$_property}: $_toValue;
+  }
+}
+
+@mixin display($_property, $_toValue) {
+  transition: #{$_property} 0.3s;
+  .menu__checkbox:checked ~ & {
+    #{$_property}: $_toValue;
+  }
+}
