--- a/src/styles/utils/_vars.scss
+++ b/src/styles/utils/_vars.scss
@@ -1,1 +1,24 @@
-$c-gray: #eee;
+$colorBody: #eee;
+$colorLight: #f1f5f4;
+$colorMain: #3f5252;
+$colorComplementary: #cd4d31;
+$colorHeading: #1c1b29;
+$colorText: #504f5e;
+$colorIcon: #c4c4c4;
+
+$containerMaxWidth: 1280px;
+$containerTopIndent: 20px;
+$containerSideIndentDesk: 55px;
+$containerSideIndentTablet: 40px;
+$containerSideIndentMobile: 20px;
+
+$titleSideIndent: 100px;
+
+$buttonWidth: 270px;
+$buttonHeight: 60px;
+
+$burgerMenuWidth: 25px;
+$burgerNenuHeight: 20px;
+
+$headerHeightLarge: 800px;
+$headerHeightSmall: 584px;
