Two more blocks

--- a/src/styles/_global.scss
+++ b/src/styles/_global.scss
@@ -16,29 +16,33 @@ body {
 }
 
 .container {
-  padding: 0 $wideScreenPadding;
+  padding: 160px $wideScreenPadding 0;
 
   @media (max-width: $noteScreenWidth) {
-    padding: 0 $noteScreenPadding;
+    padding: 160px $noteScreenPadding 0;
   }
 
   @media (max-width: $tabletScreenWidth) {
-    padding: 0 $tabletScreenPadding;
+    padding: 120px $tabletScreenPadding 0;
   }
 
   @media (max-width: $iPadScreenWidth) {
-    padding: 0 $iPadScreenPadding;
+    padding: 60px $iPadScreenPadding 0;
   }
 
-  &__header {
+  &--header {
     padding-top: 20px;
   }
 
-  &__actual {
-    padding-top: 160px;
+  &--events {
+    padding-bottom: 184px;
 
     @media (max-width: $iPadScreenWidth) {
-      padding-top: 60px;
+      padding-bottom: 80px;
     }
+  }
+
+  &--promo-bot {
+    padding-top: 0;
   }
 }
