--- a/src/styles/blocks/events.scss
+++ b/src/styles/blocks/events.scss
@@ -1,17 +1,18 @@
-.actual {
+.events {
   position: relative;
 
   &__title {
     text-align: center;
     @include translateFromLeft(1s);
-
-    @media (max-width: $tabletScreenWidth) {
-      margin-bottom: 60px;
-    }
+    margin-bottom: 63px;
 
     @media (max-width: $iPadScreenWidth) {
       @include playfairSizeHeight(36px, 125%);
       text-align: left;
     }
+  }
+
+  &__event {
+    margin-bottom: 77px;
   }
 }
