--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -10,3 +10,7 @@
 @import "blocks/actual";
 @import "blocks/exhibition";
 @import "blocks/card";
+@import "blocks/events";
+@import "blocks/event";
+@import "blocks/archieve";
+@import "blocks/promo-bot";
