--- a/src/styles/_futer.scss
+++ b/src/styles/_futer.scss
@@ -1,5 +1,5 @@
 .futer {
-  padding: 50px calc((100% - 1170px) / 2) 35px;
+  padding: 50px calc((100% - #{$contentWidth}) / 2) 35px;
   display: flex;
   flex-direction: column;
 
