--- a/src/styles/_lectures.scss
+++ b/src/styles/_lectures.scss
@@ -45,3 +45,13 @@
     margin-top: 16px;
   }
 }
+
+@media (max-width: 1200px) {
+  .lectures {
+    padding: 0 34px;
+
+    &__photo {
+      height: 390px;
+    }
+  }
+}
