--- a/src/styles/_mixins.scss
+++ b/src/styles/_mixins.scss
@@ -13,6 +13,11 @@
   background-position: center;
 }
 
+@mixin buttonMoreHover {
+  background-color: #f14a27;
+  cursor: pointer;
+}
+
 @mixin logo {
   z-index: 2;
   width: fit-content;
@@ -29,4 +34,22 @@
   line-height: 150%;
   color: #0f0e08;
   margin-bottom: 20px;
+}
+
+@mixin menuBut {
+  position: absolute;
+  top: 45px;
+  left: calc((100% - #{$contentWidth}) / 2 + 3px);
+  width: 18px;
+  height: 12px;
+  background-image: url("../images/menu.svg");
+  background-size: contain;
+
+  @media (min-width: $normalWidth) {
+    left: calc((100% - #{$contentWidthBig}) / 2 + 3px);
+  }
+}
+
+@mixin mediumSectionsHeading {
+  text-align: center;
 }
