--- a/src/styles/_section.scss
+++ b/src/styles/_section.scss
@@ -1,3 +1,15 @@
 .section {
-  padding: 100px calc((100% - 1170px) / 2);
+  padding: 100px calc((100% - #{$contentWidth}) / 2);
+}
+
+@media (min-width: $normalWidth) {
+  .section {
+    padding: 100px calc((100% - #{$contentWidthBig}) / 2);
+  }
+}
+
+@media (max-width: 1200px) {
+  .section {
+    padding: 90px 34px;
+  }
 }
