--- a/src/styles/_subscription.scss
+++ b/src/styles/_subscription.scss
@@ -40,5 +40,11 @@
     background: #f14a27;
     background-image: url("../images/button-black.svg");
     @include buttonMore;
+    transition: 0.5s;
+
+    &:hover {
+      background-color: #1a5a4c;
+      cursor: pointer;
+    }
   }
 }
