--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -1,5 +1,6 @@
 @import "utils";
 @import "fonts";
+@import "var";
 @import "mixins";
 @import "typography";
 @import "reset";
@@ -10,3 +11,4 @@
 @import "gallery";
 @import "subscription";
 @import "futer";
+@import "nav";
