--- a/src/styles/reset.scss
+++ b/src/styles/reset.scss
@@ -12,12 +12,14 @@ a,
 p,
 input,
 button {
+  overflow-x: hidden;
   margin: 0;
   padding: 0;
   border: 0;
   text-decoration: none;
   list-style: none;
   text-transform: none;
+  scroll-behavior: smooth;
 }
 
 html,
