--- a/src/styles/_header.scss
+++ b/src/styles/_header.scss
@@ -1,21 +1,20 @@
 .header {
-  height: 100%;
+  height: 75%;
   position: relative;
-  z-index: -1;
-  padding: 15px calc((100% - 1170px) / 2) 0;
+  padding: 15px calc((100% - $contentWidth) / 2) 0;
 
   &__logo {
     @include logo;
   }
 
   &__menu {
-    position: absolute;
-    top: 45px;
-    left: calc((100% - 1170px) / 2 + 3px);
-    width: 18px;
-    height: 12px;
-    background-image: url("../images/menu.svg");
-    background-size: contain;
+    @include menuBut;
+    cursor: pointer;
+    transition: transform 1s;
+
+    &:hover {
+      transform: scale(1.2);
+    }
   }
 
   &__photo {
@@ -30,7 +29,7 @@
   &__block {
     position: absolute;
     right: calc(65% - 140px);
-    top: 148px;
+    top: 235px;
   }
 
   &__heading {
@@ -46,9 +45,10 @@
   }
 
   &__vertical-text {
-    position: relative;
+    position: absolute;
     right: 14px;
-    top: 460px;
+    left: calc((100% - #{$contentWidth}) / 2);
+    bottom: 70px;
     font-weight: bold;
     font-size: 14px;
     line-height: 14px;
@@ -56,6 +56,10 @@
     text-transform: uppercase;
     width: fit-content;
     transform: rotate(-90deg);
+
+    @media (min-width: $normalWidth) {
+      left: calc((100% - #{$contentWidthBig}) / 2);
+    }
 
     &::before {
       content: "";
@@ -79,19 +83,87 @@
     color: #0f0e08;
     padding: 26px 42px;
     border: 1px solid #1a5a4c;
+    transition: border-color 0.5s, color 0.5s;
 
-    &::after {
-      position: absolute;
-      top: -1px;
-      left: calc(100% + 1px);
-      content: "";
-      background-color: #1a5a4c;
-      background-image: url("../images/button.svg");
-      @include buttonMore;
+    &:hover {
+      border-color: #f14a27;
+      color: #f14a27;
+    }
+
+    &:hover .header__next {
+      background-color: #f14a27;
+    }
+  }
+
+  &__next {
+    position: absolute;
+    top: -1px;
+    left: calc(100% + 1px);
+    content: "";
+    background-color: #1a5a4c;
+    background-image: url("../images/button.svg");
+    @include buttonMore;
+    transition: background-color 0.5s;
+
+    &:hover {
+      cursor: pointer;
+      background-color: #f14a27;
     }
   }
 
   &__toggle {
     display: none;
+
+    &:checked ~ .header__nav {
+      transform: translateY(90px);
+    }
+  }
+}
+
+.menu {
+  width: 18px;
+  height: 12px;
+  position: absolute;
+  left: 0;
+  top: 0;
+
+  &__line {
+    width: 18px;
+    height: 2px;
+    background-color: #000;
+    border-radius: 1px;
+  }
+}
+
+@media (min-width: $normalWidth) {
+  .header {
+    padding: 15px calc((100% - #{$contentWidthBig}) / 2) 0;
+  }
+}
+
+@media (max-width: $mediumWidth) {
+  .header {
+    height: 38%;
+
+    &__menu {
+      left: 37px;
+    }
+
+    &__photo {
+      width: 65%;
+    }
+
+    &__block {
+      right: calc(65% - 107px);
+      top: 135px;
+    }
+
+    &__heading {
+      font-size: 55px;
+    }
+
+    &__button {
+      margin-top: 40px;
+    }
   }
 }
