--- a/src/styles/_nav.scss
+++ b/src/styles/_nav.scss
@@ -44,7 +44,7 @@
     font-size: 18px;
     letter-spacing: 1px;
     margin-right: 5px;
-    padding: 10px 10px;
+    padding: 10px;
     transition: background-color 0.5s, color 0.5s;
 
     &:first-of-type {
