--- a/src/styles/_header.scss
+++ b/src/styles/_header.scss
@@ -1,7 +1,7 @@
 .header {
   height: 75%;
   position: relative;
-  padding: 15px calc((100% - $contentWidth) / 2) 0;
+  padding: 15px calc((100% - #{$contentWidth}) / 2) 0;
 
   &__logo {
     @include logo;
