add new sections

--- a/src/styles/abstracts/_extends.scss
+++ b/src/styles/abstracts/_extends.scss
@@ -51,3 +51,48 @@
     height: auto;
   }
 }
+
+%bottomLink {
+  position: absolute;
+  right: 212px;
+  cursor: pointer;
+  
+  @media (max-width: $tabletSize) {
+    right: 50%;
+    transform: translateX(50%);
+  }
+}
+
+%afterline {
+  content: "";
+  position: absolute;
+  top: 50%;
+  margin-left: 20px;
+  width: 70px;
+  height: 1px;
+  background: $jaguar;
+  transition: width 1s ease;
+
+  @media (min-width: $tabletSize) {
+    &:hover {
+      width: 250px;
+    }
+  }
+  
+  @media (max-width: $tabletSize) {
+    top: 100%;
+    margin-left: 0;
+    width: auto;
+    left: 0;
+    right: 0;
+  }
+}
+
+%inputText {
+  font-family: $font1;
+  font-style: normal;
+  font-weight: 200;
+  font-size: 16px;
+  line-height: 150%;
+  color: $clearDay;
+}
