--- a/src/styles/abstracts/_vars.scss
+++ b/src/styles/abstracts/_vars.scss
@@ -5,6 +5,7 @@ $clearDay: #f1f5f4;
 $jaguar: #1c1b29;
 $comet: #504f5e;
 $lightGrey: #f1f5f4;
+$silver: #c4c4c4;
 
 //Container
 $bigContainer: 1170px;
