--- a/src/styles/layout/events.scss
+++ b/src/styles/layout/events.scss
@@ -35,36 +35,15 @@
 
   &__calendar {
     padding: 10px;
-    position: absolute;
-    right: 212px;
     bottom: 184px;
-    cursor: pointer;
+    @extend %bottomLink;
 
     @media (max-width: 1230px) {
       bottom: 70px;
     }
 
-    @media (max-width: $tabletSize) {
-      right: 50%;
-      transform: translateX(50%);
-    }
-
     &::after {
-      content: "";
-      position: absolute;
-      top: 50%;
-      margin-left: 20px;
-      width: 70px;
-      height: 1px;
-      background: $jaguar;
-
-      @media (max-width: $tabletSize) {
-        top: 100%;
-        margin-left: 0;
-        width: auto;
-        left: 0;
-        right: 0;
-      }
+      @extend %afterline;
     }
   }
 }
