--- a/src/styles/layout/exhibitions.scss
+++ b/src/styles/layout/exhibitions.scss
@@ -156,32 +156,11 @@
 
   &__archive {
     padding: 10px;
-    position: absolute;
     bottom: 10px;
-    right: 212px;
-    cursor: pointer;
-
-    @media (max-width: $tabletSize) {
-      right: 50%;
-      transform: translateX(50%);
-    }
+    @extend %bottomLink;
 
     &::after {
-      content: "";
-      position: absolute;
-      top: 50%;
-      margin-left: 20px;
-      width: 70px;
-      height: 1px;
-      background: $jaguar;
-
-      @media (max-width: $tabletSize) {
-        top: 100%;
-        margin-left: 0;
-        width: auto;
-        left: 0;
-        right: 0;
-      }
+      @extend %afterline;
     }
   }
 }
