--- a/src/styles/layout/header.scss
+++ b/src/styles/layout/header.scss
@@ -43,18 +43,16 @@
   }
 
   &__lang {
+    font-size: 16px;
+    appearance: none;
+    background: transparent;
+    border: none;
+    color: $clearDay;
     position: relative;
     cursor: pointer;
 
     @media (max-width: $mobileXLsize) {
       display: none;
-    }
-
-    &::after {
-      content: url("../images/Union.svg");
-      position: absolute;
-      top: -25%;
-      right: -45%;
     }
   }
 
