--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -8,3 +8,6 @@
 @import "layout/exhibitions";
 @import "layout/events";
 @import "layout/promo";
+@import "layout/news";
+@import "layout/subscribe";
+@import "layout/footer";
