--- a/src/styles/base/_reset.scss
+++ b/src/styles/base/_reset.scss
@@ -5,17 +5,23 @@ h4,
 h3,
 p,
 ul,
-li {
+li,
+pre {
   margin: 0;
 }
 
 ul {
   padding: 0;
+}
+
+li {
   list-style-type: none;
 }
 
 a {
   text-decoration: none;
+  color: $clearDay;
+  font-family: $font1;
 }
 
 textarea {
