--- a/src/styles/abstracts/_extends.scss
+++ b/src/styles/abstracts/_extends.scss
@@ -7,7 +7,7 @@
   font-size: 16px;
   outline: none;
   cursor: pointer;
-  transition: transform 500ms ease;
+  transition: transform 500ms ease, color 0.75s ease;
 
   &:hover {
     transform: scale(0.9);
@@ -22,6 +22,12 @@
   background-color: $orange;
   border: none;
   color: $clearDay;
+
+  &:hover {
+    background-color: #b8452c;
+  }
+
+  
 }
 
 %transparentButton {
