--- a/src/styles/header.scss
+++ b/src/styles/header.scss
@@ -2,6 +2,10 @@
   height: $headerHeightLarge;
   background-color: #3f5252;
 
+  @media (max-width: 960px) {
+    height: 762px;
+  }
+
   @media (max-width: 690px) {
     height: 584px;
   }
