--- a/src/styles/menu.scss
+++ b/src/styles/menu.scss
@@ -1,4 +1,6 @@
 .menu {
+  max-height: 100vh;
+
   &__checkbox {
     position: absolute;
     display: none;
@@ -37,7 +39,7 @@
 
     &--schedule {
       top: $containerTopIndent + 70px;
-      width: 170px;
+      width: 200px;
 
       & :last-child {
         display: block;
@@ -143,7 +145,7 @@
 
     @media (max-width: 767px) {
       position: relative;
-      top: 590px;
+      top: 570px;
       left: 50%;
       transform: translate(-50%, 0);
     }
@@ -163,7 +165,7 @@
 
     @media (max-width: 767px) {
       position: relative;
-      top: 610px;
+      top: 590px;
       left: 50%;
       transform: translate(-50%, 0);
     }
