--- a/src/styles/event.scss
+++ b/src/styles/event.scss
@@ -41,8 +41,8 @@
     }
   }
 
-  @media (min-width: 1300px) {
-    grid-column-gap: 130px;
+  @media (min-width: 992px) {
+    grid-column-gap: 50px;
     grid-auto-rows: 520px;
 
     &__container--1 {
@@ -56,7 +56,7 @@
     }
 
     &__img {
-      min-width: 670px;
+      min-width: 100%;
       height: 100%;
       margin-bottom: 0;
     }
